[package]
name = "gfx-backend-gl"
version = "0.2.0"
description = "OpenGL backend for gfx-rs"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics", "gamedev"]
license = "MIT OR Apache-2.0"
authors = ["The Gfx-rs Developers"]
readme = "README.md"
documentation = "https://docs.rs/gfx-backend-gl"
workspace = "../../.."
edition = "2018"
build = "build.rs"

[lib]
name = "gfx_backend_gl"

[features]
egl = []
wgl = []
default = ["winit"]

[dependencies]
bitflags = "1"
log = { version = "0.4" }
gfx_gl = { path = "../../../../gfx_gl" }
gfx-hal = { path = "../../hal", version = "0.2" }
smallvec = "0.6"
spirv_cross = "0.12.1"
winit = { version = "0.19", optional = true }
lazy_static = "1"
libloading = "0.5"
wayland-client = { version = "0.23", features = ["egl", "dlopen"] }
derivative = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3" }

[build-dependencies]
gl_generator = "0.11"
